rewrote to java 8